force-app/main/default/objects/OCI_Job__mdt/OCI_Job__mdt.object-meta.xml
<CustomObject>
    <label>OCI Job</label>
    <pluralLabel>OCI Jobs</pluralLabel>
</CustomObject>