force-app/main/default/objects/OCI_Job__mdt/fields/End_Count__c.field-meta.xml
<CustomField>
    <fullName>End_Count__c</fullName>
    <label>End Count</label>
    <length>18</length>
    <type>Text</type>
</CustomField>