force-app/main/default/objects/OCI_Job__mdt/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <label>Hours</label>
    <length>18</length>
    <type>Text</type>
</CustomField>