force-app/main/default/objects/OCI_Job__mdt/fields/Minutes__c.field-meta.xml
<CustomField>
    <fullName>Minutes__c</fullName>
    <label>Minutes</label>
    <length>18</length>
    <type>Text</type>
</CustomField>