force-app/main/default/objects/OCI_Job__mdt/fields/Start_Count__c.field-meta.xml
<CustomField>
    <fullName>Start_Count__c</fullName>
    <label>Start Count</label>
    <length>18</length>
    <type>Text</type>
</CustomField>